# Shors_Algorithm_Simulation

./: .gitattributes  .gitignore  CHANGELOG.md  CIRCUITS.md  Classical Checks.py  LICENSE  MANIFEST.in  Quantum Part.py  README.md  RESULTS.md  THEORY.md  classical_checks.py  main.py  probability_plot.py  pyproject.toml  quantum_part.py  requirements.txt
.github/workflows/: pages.yml  publish.yml  tests.yml
examples/: benchmark_runtime.py  circuit_diagrams_example.py  example_15.py  factorisation_example.py  multiple_cases_example.py  no_plot_example.py  runtimes_test.py  shots_sweep_example.py  visualizations_example.py
images/: continued_fraction_candidates_N=21_a=2.csv  continued_fraction_candidates_N=33_a=2.csv  continued_fraction_candidates_N=35_a=2.csv
scripts/: build_pages.py
shors_algorithm_simulation/: __init__.py  cli.py  core.py  period.py  probabilities.py  validation.py
shors_algorithm_simulation/plotting/: __init__.py  diagnostics.py  formatting.py  matplotlib_helpers.py  probabilities.py  runtime.py
shors_algorithm_simulation/quantum/: __init__.py  circuits.py  gates.py  hadamard.py  iqft.py  oracle.py  quantum_circuit.py
src/: main.py
src/classical_parts/: classical_checks.py  post_checks.py  pre_checks.py
src/plots_and_period/: find_period.py  probability_plot.py  runtime_plot.py  visualizations.py
src/plotters/: probability_plot.py
src/quantum_part/: circuit_diagrams.py  hadamard_matrix.py  iqft_matrix.py  oracle_matrix.py  quantum_circuit.py  quantum_part.py  run_quantum_gates.py
tests/: conftest.py  test_circuit_diagrams.py  test_cli.py  test_install_smoke.py  test_period_finding.py
