[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shors-algorithm-simulation"
version = "0.1.0"
description = "Educational classical simulation of Shor's period-finding algorithm."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
circuits = [
    "qiskit",
    "pylatexenc",
]
test = [
    "pytest",
    "setuptools>=68",
]
dev = [
    "pytest",
    "setuptools>=68",
    "qiskit",
    "pylatexenc",
    "black",
    "ruff",
]

[project.scripts]
shors-sim = "shors_algorithm_simulation.cli:main"

[tool.setuptools.packages.find]
include = ["shors_algorithm_simulation*"]

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 88
force-exclude = '''
/(
    \.git
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | .*\.egg-info
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
