[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shors-algorithm-simulation"
version = "0.1.1"
description = "Educational classical simulation of Shor's period-finding algorithm."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Sid Richards" },
]
keywords = [
    "shor",
    "shors-algorithm",
    "quantum-computing",
    "quantum-algorithms",
    "factorization",
    "simulation",
    "education",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[project.urls]
Homepage = "https://SidRichardsQuantum.github.io/Shors_Algorithm_Simulation/"
Documentation = "https://SidRichardsQuantum.github.io/Shors_Algorithm_Simulation/"
Source = "https://github.com/SidRichardsQuantum/Shors_Algorithm_Simulation"
Issues = "https://github.com/SidRichardsQuantum/Shors_Algorithm_Simulation/issues"
Changelog = "https://github.com/SidRichardsQuantum/Shors_Algorithm_Simulation/blob/main/CHANGELOG.md"

[project.optional-dependencies]
circuits = [
    "qiskit",
    "pylatexenc",
]
test = [
    "pytest",
    "setuptools>=68",
]
dev = [
    "pytest",
    "setuptools>=68",
    "qiskit",
    "pylatexenc",
    "black",
    "ruff",
]

[project.scripts]
shors-sim = "shors_algorithm_simulation.cli:main"

[tool.setuptools.packages.find]
include = ["shors_algorithm_simulation*"]

[tool.black]
target-version = ["py310", "py311", "py312"]
line-length = 88
force-exclude = '''
/(
    \.git
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | .*\.egg-info
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".pytest_cache",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
